--- a/content/Systems/grids.hbs
+++ b/content/Systems/grids.hbs
@@ -9,29 +9,18 @@ page-category: "systems"
 
 <main class="w w--main">
 	<div class="g">
-	    <div class="c__lg--5-7">
+	    <div class="c__lg--1">
 
   			<div class="page{{#if nav-variant}} page--{{nav-variant}}{{/if}}">
 				<div class="page__head">
 					<h1 class="page__title">{{title}}</h1>
 					{{#if subtitle}}<p class="page__subtitle">{{subtitle}}</p>{{/if}}
 				</div>
+			</div>
 
-<!-- writings -->
-
-		        <div class="page__body rte">
-		        </div>
-
-<!-- example -->
-	        </div>
-        </div>
-        <div class="c__lg--2-7">
-
-	        {{> panel panel }}
         </div>
     </div>
 </main>
-
 
 <div class="w w-example">
 	<div class="g"> <!-- rainbow -->
