--- a/content/_partials/article.hbs
+++ b/content/_partials/article.hbs
@@ -13,8 +13,9 @@
 		{{/if}}
 		<div class="article__body rte">
 			{{{content.body}}}
-			<div class="article__aside">
-				ASIDE
+			<div class="article__aside rte">
+				<h4>Aside title</h4>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla posuere placerat eros ut lobortis.</p>
 			</div>
 		</div>
 		<footer class="article__foot">
