--- a/content/_partials/input__email.hbs
+++ b/content/_partials/input__email.hbs
@@ -3,8 +3,8 @@
     <input
         type="email"
         role="textbox"
-        class="input
-            {{#if item.modifier}} input--{{item.modifier}}{{/if}}
+        class="form__input
+            {{#if item.modifier}} form__input--{{item.modifier}}{{/if}}
             {{#if item.size}} {{item.size}}{{/if}}"
         {{#if item.multiple}} multiple="multiple"{{/if}}
         {{#if item.required}} required="required" aria-required="true"{{/if}}
