--- a/content/_partials/input__tel.hbs
+++ b/content/_partials/input__tel.hbs
@@ -2,8 +2,8 @@
     <input
         type="tel"
         role="textbox"
-        class="input
-            {{#if item.modifier}} input--{{item.modifier}}{{/if}}
+        class="form__input
+            {{#if item.modifier}} form__input--{{item.modifier}}{{/if}}
             {{#if item.size}} {{item.size}}{{/if}}"
         {{#if item.required}} required="required" aria-required="true"{{/if}}
         {{#if item.readonly}} readonly="readonly" aria-readonly="true"{{/if}}
