--- a/content/_partials/input__radio.hbs
+++ b/content/_partials/input__radio.hbs
@@ -1,8 +1,8 @@
 {{#this}}
     <input
         type="radio"
-        class="input
-            {{#if item.modifier}} input--{{item.modifier}}{{/if}}"
+        class="form__input
+            {{#if item.modifier}} form__input--{{item.modifier}}{{/if}}"
         {{#if item.checked}} checked="checked" aria-checked="true"{{/if}}
         {{#if item.required}} required="required" aria-required="true"{{/if}}
         {{#if item.disabled}} disabled="disabled" aria-disabled="true"{{/if}}
