--- a/content/_partials/select.hbs
+++ b/content/_partials/select.hbs
@@ -1,6 +1,6 @@
 {{#this}}
 <select
-    class="select{{#if item.modifier}} select--{{item.modifier}}{{/if}}"
+    class="form__input{{#if item.modifier}} form__input--{{item.modifier}}{{/if}}"
     {{#if item.multiple}} multiple="multiple"{{/if}}
     {{#if item.required}} required="required"{{/if}}
     {{#if item.disabled}} disabled="disabled"{{/if}}
