Added icons to accordion

--- a/assets/less/base_modules/accordion.less
+++ b/assets/less/base_modules/accordion.less
@@ -40,6 +40,12 @@
   	&:hover {
   		background-color: darken(@ACCORDION-TitleBgColor, 10%);
   	}
+
+    .icon {
+        float: right;
+        line-height: 1;
+        ._font-size (@TYPE-LineHeight);
+    }
 }
 
 .accordion__panel {
