--- a/assets/less/base_modules/article.less
+++ b/assets/less/base_modules/article.less
@@ -39,7 +39,7 @@
 
  .article__aside {
  	background-color: @COLOR-LimeLighter;
- 	._padding (@TYPE-LineHeight);
+ 	._padding (0, @TYPE-LineHeight);
  }
 
 .article__foot {
