--- a/content/Examples/holygrail.hbs
+++ b/content/Examples/holygrail.hbs
@@ -1,10 +1,10 @@
 ---
-title: Standard Layout
-subtitle: fits most uses without issue
+title: Holy Grail Layout
+subtitle: A good 3 Column Layout
 layout: example.hbs
 
-nav-title: "Standard Layout"
-nav-text: "Standard Layout"
+nav-title: "Holy Grail Layout"
+nav-text: "Holy Grail Layout"
 nav-variant: "examples"
 page-category: "examples"
 ---
@@ -28,6 +28,21 @@ page-category: "examples"
 <main class="main">
 	<div class="w w--banner">
 		[BANNER MAIN]
+	</div>
+	<div class="w w--actions">
+		<div class="g">
+		    <div class="c__lg--3-14 c__md--1-2">
+		    	{{> panel panel }}
+		    </div>
+		    <div class="c__lg--8-14 c__md--1">
+		    	{{> panel panel }}
+		    	{{> panel panel }}
+		    	{{> panel panel }}
+		    </div>
+		    <div class="c__lg--3-14 c__md--1-2">
+		    	{{> panel panel }}
+		    </div>
+		</div>
 	</div>
 	<div class="w w--actions">
 		<div class="g">
