--- a/content/Examples/index.hbs
+++ b/content/Examples/index.hbs
@@ -1,5 +1,6 @@
 ---
-title: Layout Examples
+title: Examples
+subtitle: Some layout tests
 layout: example.hbs
 
 navigation-main: true
@@ -20,41 +21,33 @@ page-category: "examples"
 	</div>
 </header>
 
-<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none" style="display:block;background-color:#F5F5F5;">
-	<path d="M0 0 C 50 100 80 100 100 0 Z" style="fill:#ABB4E2;"></path>
-</svg>
-
-<main class="w w--main">
-
-	<div class="w w--primary">
-		<div class="g">
-		    <div class="c__lg--5-7">
-		    	PAGE
-		    </div>
-		    <div class="c__lg--2-7">
-		    	{{> panel panel }}
-		    </div>
-		</div>
-	</div>
-
-	<div class="w w--secondary">
+<main class="main">
+	<div class="w w--content">
 		<div class="g">
 		    <div class="c__lg--1">
-		    	SECONDARY
+		    	{{#withSort page-category "page.title"}}
+				{{#is page-category "examples"}}
+				<ul>
+    				{{#each this.pages}}
+	            		{{#this}}
+						{{#isnt data.navigation-main true}}
+                        <li><a class="list__link list__link--{{data.nav-variant}}" href="{{relative ../../../../../page.dest this.dest}}" title="{{data.nav-title}}"><span>{{capitalizeFirst data.nav-text}}</span></a></li>
+                        {{/isnt}}
+                        {{/this}}
+        			{{/each}}
+                </ul>
+                {{/is}}
+                {{/withSort}}
 		    </div>
 		</div>
 	</div>
 
 </main>
 
-<svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 100" preserveAspectRatio="none" style="display:block;background-color:#F5F5F5;">
-	<path d="M0 100 C 20 0 50 0 100 100 Z" style="fill:#ABB4E2;"></path>
-</svg>
-
 <footer class="w w--foot">
 	<div class="g">
 	    <div class="c__lg--1">
-	    	FOOTER
+	    	[SITE COPYRIGHT]
 	    </div>
 	</div>
 </footer>
