adding in github feedback

--- a/content/_partials/ALLOY_scripts.hbs
+++ b/content/_partials/ALLOY_scripts.hbs
@@ -1,6 +1,8 @@
 
 <!-- JavaScript -->
 <script data-main="app/main" src="{{ assets }}/js/libs/require/require.js"></script>
+<!-- GitHub Buttons -->
+<script async defer id="github-bjs" src="//buttons.github.io/buttons.js"></script>
 
 {{#if js-accordion}}
 <script type="text/JavaScript">
