--- a/content/_partials/ALLOY_footer.hbs
+++ b/content/_partials/ALLOY_footer.hbs
@@ -6,7 +6,7 @@
 		</div>
 	
 		<div class="c__md--1-3 c__lg--1-3">
-			{{>panel panel}}
+			{{>panel ALLOY_panel--github}}
 		</div>
 		
 		<div class="c__md--1-3 c__lg--1-3">
