Changes to start with dropmenus within buttons

--- a/content/Systems/buttons.hbs
+++ b/content/Systems/buttons.hbs
@@ -27,12 +27,62 @@ page-category: "systems"
 
 				<section class="section section--example">
 		            <header class="section__head">
-		                <h2 class="section__title">Example</h2>
+		                <h2 class="section__title">Example: Statuses</h2>
 		            </header>
 
 		            <div class="secton__body">
 				        <!-- code -->
+					        {{> button button-success}}
+					        {{> button button-info}}
+					        {{> button button-warning}}
+					        {{> button button-danger}}
+				        <!-- end of code -->
+			        </div>
 
+		        </section>
+
+
+				<section class="section section--example">
+		            <header class="section__head">
+		                <h2 class="section__title">Examples: Sizes</h2>
+		            </header>
+
+		            <div class="secton__body">
+				        <!-- code -->
+					        {{> button button-xsmall}}
+					        {{> button button-small}}
+					        {{> button button}}
+					        {{> button button-large}}
+					        {{> button button-xlarge}}
+					        {{> button button-block}}
+				        <!-- end of code -->
+			        </div>
+
+		        </section>
+
+
+				<section class="section section--example">
+		            <header class="section__head">
+		                <h2 class="section__title">Examples: Icons</h2>
+		            </header>
+
+		            <div class="secton__body">
+				        <!-- code -->
+					        {{> button button-tick}}
+					        {{> button button-cross}}
+				        <!-- end of code -->
+			        </div>
+
+		        </section>
+
+				<section class="section section--example">
+		            <header class="section__head">
+		                <h2 class="section__title">Examples: Bages</h2>
+		            </header>
+
+		            <div class="secton__body">
+				        <!-- code -->
+					        {{> button button-badge}}
 				        <!-- end of code -->
 			        </div>
 
