--- a/content/_partials/button.hbs
+++ b/content/_partials/button.hbs
@@ -9,12 +9,13 @@
             {{#if item.status}} {{item.status}}{{/if}}
             {{#if item.size}} {{item.size}}{{/if}}
             {{#if item.block}} block{{/if}}"
-        {{#if content.title}} title="{{content.title}}"{{/if}}>
+        {{#if content.title}} title="{{content.title}}"{{/if}}
+        {{#if item.dropdown}} data-toggle="dropdown" aria-expanded="false"{{/if}}>
         <span class="ripple"></span>
         {{#if content.icon}}{{#each content.icon}}{{#this}}{{>icon}}{{/this}}{{/each}}{{/if}}
-        <span>
-        {{content.text}}</span>
+        {{#if content.text}}<span>{{content.text}}</span>{{/if}}
         {{#if content.badge}}{{#each content.badge}}{{#this}}{{>badge}}{{/this}}{{/each}}{{/if}}
+        {{#if item.dropdown}}<span></span>{{/if}}
     </a>
     {{else}}
         {{#if content.type}}
@@ -25,10 +26,10 @@
                     {{#if item.block}} block{{/if}}"
                 type="submit"
                 {{#if item.disabled}} disabled="disabled"{{/if}}
-                >
+                {{#if item.dropdown}} data-toggle="dropdown" aria-expanded="false"{{/if}}>
                 <span class="ripple"></span>
                 {{#if content.icon}}{{#each content.icon}}{{#this}}{{>icon}}{{/this}}{{/each}}{{/if}}
-                <span>{{content.text}}</span>
+                {{#if content.text}}<span>{{content.text}}</span>{{/if}}
                 {{#if content.badge}}{{#each content.badge}}{{#this}}{{>badge}}{{/this}}{{/each}}{{/if}}
             </button>
         {{else}}
@@ -36,10 +37,11 @@
                     {{#if item.modifier}} button--{{item.modifier}}{{/if}}
                     {{#if item.disabled}} disabled{{/if}}
                     {{#if item.size}} {{item.size}}{{/if}}"
-                {{#if content.title}} title="{{content.title}}"{{/if}}>
+                {{#if content.title}} title="{{content.title}}"{{/if}}
+                {{#if item.dropdown}} data-toggle="dropdown" aria-expanded="false"{{/if}}>
                 <span class="ripple"></span>
                 {{#if content.icon}}{{#each content.icon}}{{#this}}{{>icon}}{{/this}}{{/each}}{{/if}}
-                <span>{{content.text}}</span>
+                {{#if content.text}}<span>{{content.text}}</span>{{/if}}
                 {{#if content.badge}}{{#each content.badge}}{{#this}}{{>badge}}{{/this}}{{/each}}{{/if}}
             </span>
         {{/if}}
