--- a/content/_partials/button-group.hbs
+++ b/content/_partials/button-group.hbs
@@ -1,5 +1,5 @@
 {{#this}}
-<div class="buttongroup{{#if item.modifier}} buttongroup--{{item.modifier}}{{/if}}">
+<div role="group" class="buttongroup{{#if item.modifier}} buttongroup--{{item.modifier}}{{/if}}{{#if item.size}} {{item.size}}{{/if}}{{#if item.vertical}} vertical{{/if}}">
 {{#if actions}}
 	{{#each actions}}
 		{{#if buttons}}
