--- a/assets/less/base_modules/button.less
+++ b/assets/less/base_modules/button.less
@@ -162,6 +162,11 @@
     display: block !important;
 }
 
+.button.block {
+    width: 100%;
+}
+
+
 // MOBILE
 // ----------------------------------------------------
 
