--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -16,6 +16,7 @@
 @import "base_modules/box.less";
 @import "base_modules/breadcrumbs.less";
 //@import "base_modules/browsehappy.less";
+@import "base_modules/badge.less";
 @import "base_modules/button.less";
 @import "base_modules/card.less";
 //@import "base_modules/column.less";
