--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -145,6 +145,7 @@
 @TYPE-FontSize:                 14;
 @TYPE-LineHeight:               24;
 @TYPE-FontFamily:               Arial, Helvetica, sans-serif;
+@TYPE-MonoSpaceFontFamily:      Consolas, monospace;
 @TYPE-FontColor:                @COLOR-GreyDarker;
 @TYPE-HeadingsFontFamily:       serif;
 @TYPE-HeadingsColor:            @COLOR-GreyDarker;
@@ -196,6 +197,7 @@
 
 @MODULE-Accordion:              true;
 @MODULE-Alert:                  true;
+@MODULE-Badge:                  true;
 @MODULE-Box:                    true;
 @MODULE-Breadcrumbs:            true;
 @MODULE-Browsehappy:            true;
