--- a/content/Components/badges.hbs
+++ b/content/Components/badges.hbs
@@ -40,6 +40,24 @@ page-category: "components"
 
 		        </section>
 
+				<section class="section section--example">
+		            <header class="section__head">
+		                <h2 class="section__title">Example: Status</h2>
+		            </header>
+
+		            <div class="secton__body">
+				        <!-- code -->
+
+				        {{> badge badge--info }}
+				        {{> badge badge--warn }}
+				        {{> badge badge--danger }}
+				        {{> badge badge--success }}
+
+				        <!-- end of code -->
+			        </div>
+
+		        </section>
+
 <!-- code -->
 
 		    	<section class="section section--code">
