Hovercards and Labels added

--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -206,7 +206,9 @@
 @MODULE-Column:                 true;
 @MODULE-Form:                   true;
 @MODULE-Icon:                   true;
+@MODULE-HoverCard:				true;
 @MODULE-Image:                  true;
+@MODULE-Label:                  true;
 @MODULE-Map:                    true;
 @MODULE-Media:                  true;
 @MODULE-Modal:                  true;
