--- a/content/Components/hovercard.hbs
+++ b/content/Components/hovercard.hbs
@@ -33,6 +33,16 @@ page-category: "components"
 		            <div class="secton__body">
 				        <!-- code -->
 
+				        <div class="hovercard">
+        					<a href="#" class="hovercard__avatar"><img src="http://placehold.it/64x64" alt="" class="avatar" /></a>
+			        		<div class="hovercard__content">
+		        				<div class="hovercard__name">Davey Jones</div>
+		        				<div class="hovercard__info">40,000 followers</div>
+			        			<div class="hovercard__bio">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec placerat augue vel varius tincidunt. Suspendisse blandit gravida egestas.</div>
+			        			<div class="hovercard__actions"><a href="#" class="button">Profile</a> <a href="#" class="button">Follow</a></div>
+			        		</div>
+				        </div>
+
 				        <!-- end of code -->
 			        </div>
 
