--- a/content/Components/labels.hbs
+++ b/content/Components/labels.hbs
@@ -34,6 +34,10 @@ page-category: "components"
 				        <!-- code -->
 
 		        		{{> label label }}
+		        		{{> label label--info}}
+		        		{{> label label--warn}}
+		        		{{> label label--danger}}
+		        		{{> label label--success}}
 		        		{{> label label-for }}
 
 				        <!-- end of code -->
