Added focus example

--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -202,6 +202,7 @@
 @MODULE-Button:                 true;
 @MODULE-Card:                   true;
 @MODULE-Column:                 true;
+@MODULE-Focus:                  true;
 @MODULE-Form:                   true;
 @MODULE-Icon:                   true;
 @MODULE-Image:                  true;
