--- a/content/Components/focus.hbs
+++ b/content/Components/focus.hbs
@@ -33,6 +33,8 @@ page-category: "components"
 		            <div class="secton__body">
 				        <!-- code -->
 
+				        {{> focus focus }}
+
 				        <!-- end of code -->
 			        </div>
 
