--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -19,6 +19,7 @@
 @import "base_modules/button.less";
 @import "base_modules/card.less";
 //@import "base_modules/column.less";
+@import "base_modules/focus.less";
 @import "base_modules/form.less";
 @import "base_modules/icon.less";
 @import "base_modules/image.less";
