--- a/assets/less/base_modules/breadcrumbs.less
+++ b/assets/less/base_modules/breadcrumbs.less
@@ -44,7 +44,7 @@
         }
 
         &:hover {
-            background-color: darken(@BREADCRUMBS-BgColor, 10%);
+            background-color: lighten(@BREADCRUMBS-BgColor, 5%);
         }
     }
 }
