--- a/assets/less/base_modules/story.less
+++ b/assets/less/base_modules/story.less
@@ -32,7 +32,7 @@
 }
 
 .story__actions {
-	border-top: 1px solid darken(@STORY-BgColor, 5);
+	border-top: 1px solid darken(@STORY-BgColor, 5%);
 	._margin-top (15);
 	._padding-top (20);
 }
@@ -45,12 +45,12 @@
 	display: block;
 	position: relative;
 	float: left;
-	border: 1px solid darken(@STORY-BgColor, 10);
+	border: 1px solid darken(@STORY-BgColor, 5%);
 	._margin-right (20);
 }
 
 .story-cite {
-	border: 1px solid darken(@STORY-BgColor, 10);
+	border: 1px solid darken(@STORY-BgColor, 5%);
 	._margin (10, 0, 20, 0);
 	._border-radius (2);
 }
@@ -65,16 +65,16 @@
 }
 
 .story-cite__link {
-	color: lighten(@STORY-CiteColor, 30);
+	color: lighten(@STORY-CiteColor, 30%);
 	display:block;
 	text-decoration: none;
 
 	&:link {
-		color: lighten(@STORY-CiteColor, 30);
+		color: lighten(@STORY-CiteColor, 30%);
 	}
 
 	&:visited {
-		color: lighten(@STORY-CiteColor, 30);
+		color: lighten(@STORY-CiteColor, 30%);
 	}
 
 	&:hover {}
