--- a/assets/less/modules/list__navigation.less
+++ b/assets/less/modules/list__navigation.less
@@ -11,7 +11,7 @@
 @NAVIGATION-Color:                 		@COLOR-White;
 @NAVIGATION-BgColor:                   	@COLOR-Base;
 @NAVIGATION-HoverColor:            		@COLOR-White;
-@NAVIGATION-HoverBgColor:              	darken(@NAVIGATION-BgColor, 10%);
+@NAVIGATION-HoverBgColor:              	lighten(@NAVIGATION-BgColor, 5%);
 @NAVIGATION-ActiveBorder:             	@COLOR-Base;
 @NAVIGATION-FontFamily:             	@TYPE-HeadingsFontFamily;
 
