--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -107,7 +107,7 @@
 @COLOR-GreyDark:				#616161;
 @COLOR-GreyDarker:				#212121;
 
-@COLOR-Base:                    @COLOR-Indigo;
+@COLOR-Base:                    @COLOR-Blue;
 
 // ANNIMATION CURVES
 // ----------------------------------------------------
