--- a/assets/less/base_modules/pagination.less
+++ b/assets/less/base_modules/pagination.less
@@ -10,7 +10,7 @@
 
 @PAGINATION-Color:              @BUTTON-TextColor;
 @PAGINATION-BgColor:            @BUTTON-BgColor;
-@PAGINATION-BgColorHover:       @BUTTON-HoverColor;
+@PAGINATION-HoverBgColor:       @BUTTON-HoverColor;
 
 // BASE
 // ----------------------------------------------------
@@ -33,7 +33,7 @@
     display: inline-block;
     padding: 0;
     ._margin (0, 10, @TYPE-LineHeight, 10);
-    ._clearfix ();
+    ._clearfix();
 
     .list__item {
         float: left;
@@ -53,7 +53,7 @@
         ._transition (background-color, 0.1s);
 
         &:hover {
-            background-color: @PAGINATION-BgColorHover;
+            background-color: @PAGINATION-HoverBgColor;
         }
     }
 
@@ -66,7 +66,7 @@
     }
 
     .current {
-        background-color: @PAGINATION-BgColorHover;
+        background-color: @PAGINATION-HoverBgColor;
         ._user-select();
     }
 }
