Checking in so that I can sync with latest...
...and get a fixed logger

--- a/content/_layouts/default.hbs
+++ b/content/_layouts/default.hbs
@@ -52,6 +52,7 @@
     {{> ALLOY_footer }}
     {{> ALLOY_copyright }}
     {{> ALLOY_scripts }}
+    {{> ALLOY_debug }}
 
     <!-- <div class="modal__mask modal__mask--visible"></div> -->
 
