--- a/content/Examples/newspaper.hbs
+++ b/content/Examples/newspaper.hbs
@@ -17,7 +17,7 @@ page-category: "examples"
 	</div>
 </header>
 
-<nav class="w w--navigation">
+<nav class="w w--nav">
 	<div class="g">
 	    <div class="c__lg--1">
 	    	[SITE MAINNAV]
