--- a/content/_partials/input__hidden.hbs
+++ b/content/_partials/input__hidden.hbs
@@ -1,6 +1,5 @@
 {{#this}}
-	<input
-	    type="hidden"
+	<input type="hidden"
 	    {{#if item.id}} id="{{item.id}}"{{/if}}
 	    {{#if item.name}} name="{{item.name}}"{{/if}}
 	    {{#if item.value}} value="{{item.value}}"{{/if}}
